--- a/Nativo/pages/results/activity_1.html
+++ b/Nativo/pages/results/activity_1.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Nativo | Results</title>
-  <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Font Awesome -->
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title>Nativo | Results</title>
+
+  <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
@@ -19,6 +18,7 @@
 
 <body class="hold-transition sidebar-mini">
   <div class="wrapper">
+
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
       <!-- Left navbar links -->
@@ -34,41 +34,39 @@
         </li>
       </ul>
     </nav>
+    <!-- /.navbar -->
 
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="../../index.html" class="brand-link">
-        <img src="../../dist/img/logo_nativo.png" alt="Nativo Logo" class="brand-image img-circle elevation-3"
+        <img src="../../dist/img/NativoLogo.png" alt="Nativo Logo" class="brand-image img-circle elevation-3"
           style="opacity: .8">
         <span class="brand-text font-weight-light">Nativo</span>
       </a>
 
       <!-- Sidebar -->
       <div class="sidebar">
-        <!-- Sidebar user (optional) -->
+        <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+            <img src="../../dist/img/user-mauricio.jpeg" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">Samir Millán</a>
+            <a href="#" class="d-block">Mauricio Drada</a>
           </div>
         </div>
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
-            <!-- menu-open -->
-            <li class="nav-header">MAIN NAVIGATION</li>
-            <li class="nav-item has-treeview">
+            <!-- Add icons to links using .nav-icon class with font-awesome or other icon font library -->
+            <li class="nav-item has-treeview menu-open">
               <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-th"></i>
                 <p>
                   Activities
-                  <i class="fas fa-angle-left right"></i>
+                  <i class="right fas fa-angle-left"></i>
                   <span class="right badge badge-danger">New</span>
                 </p>
               </a>
@@ -87,22 +85,13 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item has-treeview menu-open">
-              <a href="#" class="nav-link active">
-                <i class="nav-icon fas fa-table"></i>
+            <li class="nav-item">
+              <a href="../results/activity_1.html" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
                 <p>
                   Results
-                  <i class="fas fa-angle-left right"></i>
                 </p>
               </a>
-              <ul class="nav nav-treeview">
-                <li class="nav-item">
-                  <a href="../results/activity_1.html" class="nav-link active">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Activities</p>
-                  </a>
-                </li>
-              </ul>
             </li>
           </ul>
         </nav>
@@ -114,23 +103,24 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
-      <section class="content-header">
+      <div class="content-header">
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>Results</h1>
-            </div>
+              <h1 class="m-0 text-dark">Results</h1>
+            </div><!-- /.col -->
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
               </ol>
-            </div>
-          </div>
+            </div><!-- /.col -->
+          </div><!-- /.row -->
         </div><!-- /.container-fluid -->
-      </section>
+      </div>
+      <!-- /.content-header -->
 
       <!-- Main content -->
-      <section class="content">
+      <div class="content">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
@@ -146,169 +136,133 @@
                     <li class="nav-item">
                       <a class="nav-link active" id="custom-tabs-one-home-tab" data-toggle="pill"
                         href="#custom-tabs-one-home" role="tab" aria-controls="custom-tabs-one-home"
-                        aria-selected="true">Activities 1</a>
+                        aria-selected="true">Activity 1</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" id="custom-tabs-one-profile-tab" data-toggle="pill"
                         href="#custom-tabs-one-profile" role="tab" aria-controls="custom-tabs-one-profile"
-                        aria-selected="false">Activities 2</a>
+                        aria-selected="false">Activity 2</a>
                     </li>
                   </ul>
                 </div>
                 <div class="card-body">
                   <div class="tab-content" id="custom-tabs-one-tabContent">
-                    <div class="container-fluid">
-                      <div class="row">
-                        <div class="col-md-6">
-                          <div class="card">
-                            <div class="card-body p-0">
-                              <table class="table">
-                                <thead>
-                                  <tr>
-                                    <th style="width: 10px">#</th>
-                                    <th>Activity 1</th>
-                                    <th>Average</th>
-                                    <th style="width: 40px">Label</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <td>1.</td>
-                                    <td>Total Questions</td>
-                                    <td>
-                                      <div class="progress progress-xs">
-                                        <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-danger">55%</span></td>
-                                  </tr>
-                                  <tr>
-                                    <td>2.</td>
-                                    <td>Solved Questions</td>
-                                    <td>
-                                      <div class="progress progress-xs">
-                                        <div class="progress-bar bg-warning" style="width: 70%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-warning">70%</span></td>
-                                  </tr>
-                                  <tr>
-                                    <td>3.</td>
-                                    <td>Total Attempts</td>
-                                    <td>
-                                      <div class="progress progress-xs progress-striped active">
-                                        <div class="progress-bar bg-primary" style="width: 30%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-primary">30%</span></td>
-                                  </tr>
-                                  <tr>
-                                    <td>4.</td>
-                                    <td>Activity Resolved</td>
-                                    <td>
-                                      <div class="progress progress-xs progress-striped active">
-                                        <div class="progress-bar bg-success" style="width: 90%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-success">90%</span></td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </div>
+                    <div class="tab-pane fade show active" id="custom-tabs-one-home" role="tabpanel"
+                      aria-labelledby="custom-tabs-one-home-tab">
+                      <div class="col-md-4">
+                        <div class="progress-group">
+                          Total of Questions
+                          <span class="float-right"><b>152</b>/200</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-primary" style="width: 80%"></div>
+                          </div>
+                        </div>
+                        <!-- /.progress-group -->
+
+                        <div class="progress-group">
+                          Solved Questions
+                          <span class="float-right"><b>325</b>/400</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-danger" style="width: 75%"></div>
                           </div>
                         </div>
 
-                        <div class="col-md-6">
-                          <div class="card">
-                            <div class="card-body p-0">
-                              <table class="table">
-                                <thead>
-                                  <tr>
-                                    <th style="width: 10px">#</th>
-                                    <th>Activity 2</th>
-                                    <th>Average</th>
-                                    <th style="width: 40px">Label</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <td>1.</td>
-                                    <td>Total Questions</td>
-                                    <td>
-                                      <div class="progress progress-xs">
-                                        <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-danger">55%</span></td>
-                                  </tr>
-                                  <tr>
-                                    <td>2.</td>
-                                    <td>Solved Questions</td>
-                                    <td>
-                                      <div class="progress progress-xs">
-                                        <div class="progress-bar bg-warning" style="width: 70%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-warning">70%</span></td>
-                                  </tr>
-                                  <tr>
-                                    <td>3.</td>
-                                    <td>Total Attempts</td>
-                                    <td>
-                                      <div class="progress progress-xs progress-striped active">
-                                        <div class="progress-bar bg-primary" style="width: 30%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-primary">30%</span></td>
-                                  </tr>
-                                  <tr>
-                                    <td>4.</td>
-                                    <td>Activity Resolved</td>
-                                    <td>
-                                      <div class="progress progress-xs progress-striped active">
-                                        <div class="progress-bar bg-success" style="width: 90%"></div>
-                                      </div>
-                                    </td>
-                                    <td><span class="badge bg-success">90%</span></td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </div>
+                        <!-- /.progress-group -->
+                        <div class="progress-group">
+                          <span class="progress-text">Total Attempts</span>
+                          <span class="float-right"><b>480</b>/800</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-success" style="width: 60%"></div>
                           </div>
                         </div>
+
+                        <!-- /.progress-group -->
+                        <div class="progress-group">
+                          Average
+                          <span class="float-right"><b>285</b>/500</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-warning" style="width: 50%"></div>
+                          </div>
+                        </div>
+                        <!-- /.progress-group -->
                       </div>
-                    </div><!-- /.container-fluid -->
+                      <!-- /.col -->
+                    </div>
+                    <div class="tab-pane fade" id="custom-tabs-one-profile" role="tabpanel"
+                      aria-labelledby="custom-tabs-one-profile-tab">
+                      <div class="col-md-4">
+                        <div class="progress-group">
+                          Total Of Questions
+                          <span class="float-right"><b>160</b>/200</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-primary" style="width: 80%"></div>
+                          </div>
+                        </div>
+                        <!-- /.progress-group -->
+
+                        <div class="progress-group">
+                          Solved Questions
+                          <span class="float-right"><b>310</b>/400</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-danger" style="width: 75%"></div>
+                          </div>
+                        </div>
+
+                        <!-- /.progress-group -->
+                        <div class="progress-group">
+                          <span class="progress-text">Total Attempts</span>
+                          <span class="float-right"><b>480</b>/800</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-success" style="width: 60%"></div>
+                          </div>
+                        </div>
+
+                        <!-- /.progress-group -->
+                        <div class="progress-group">
+                          Average
+                          <span class="float-right"><b>250</b>/500</span>
+                          <div class="progress progress-sm">
+                            <div class="progress-bar bg-warning" style="width: 50%"></div>
+                          </div>
+                        </div>
+                        <!-- /.progress-group -->
+                      </div>
+                      <!-- /.col -->
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </div><!-- /.container-fluid -->
+      </div>
+      <!-- /.content -->
     </div>
-    </section>
-    <!-- /.content -->
+    <!-- /.content-wrapper -->
 
+    <!-- Control Sidebar -->
+    <aside class="control-sidebar control-sidebar-dark">
+      <!-- Control sidebar content goes here -->
+      <div class="p-3">
+        <h5>Title</h5>
+        <p>Sidebar content</p>
+      </div>
+    </aside>
+    <!-- /.control-sidebar -->
 
-    <!-- Main content to erase -->
-    <section class="content">
-
-    </section>
-  </div>
-  <!-- /.content-wrapper -->
-  <footer class="main-footer">
-    <div class="float-right d-none d-sm-block">
-      <b>Version </b>1.0 
-    </div>
-    <strong> &copy;2020 <a href="../../index.html">Nativo </a></strong>
-  </footer>
-
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
+    <!-- Main Footer -->
+    <footer class="main-footer">
+      <!-- To the right -->
+      <div class="float-right d-none d-sm-inline">
+        Version 1.0.0
+      </div>
+      <!-- Default to the left -->
+      <strong> &copy; 2020 <a href="../../index.html">Nativo </a></strong>
+    </footer>
   </div>
   <!-- ./wrapper -->
+
+  <!-- REQUIRED SCRIPTS -->
 
   <!-- jQuery -->
   <script src="../../plugins/jquery/jquery.min.js"></script>
@@ -316,8 +270,6 @@
   <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../../dist/js/adminlte.min.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="../../dist/js/demo.js"></script>
 </body>
 
 </html>
