--- a/Nativo/pages/activities/weekly.html
+++ b/Nativo/pages/activities/weekly.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Nativo | Weekly</title>
-  <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Font Awesome -->
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title>Nativo | Weekly Activities</title>
+
+  <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- SweetAlert2 -->
-  <link rel="stylesheet" href="../../plugins/sweetalert2/sweetalert2.min.css">
-  <!-- Toastr -->
-  <link rel="stylesheet" href="../../plugins/toastr/toastr.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
@@ -23,6 +18,7 @@
 
 <body class="hold-transition sidebar-mini">
   <div class="wrapper">
+
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
       <!-- Left navbar links -->
@@ -34,10 +30,9 @@
           <a href="../../index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="../contact/contact.html" class="nav-link">Contact</a>
+          <a href="../../pages/contact/contact.html" class="nav-link">Contact</a>
         </li>
       </ul>
-
     </nav>
     <!-- /.navbar -->
 
@@ -45,32 +40,29 @@
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="../../index.html" class="brand-link">
-        <img src="../../dist/img/logo_nativo.png" alt="Nativo Logo" class="brand-image img-circle elevation-3"
+        <img src="../../dist/img/NativoLogo.png" alt="Nativo Logo" class="brand-image img-circle elevation-3"
           style="opacity: .8">
         <span class="brand-text font-weight-light">Nativo</span>
       </a>
 
       <!-- Sidebar -->
       <div class="sidebar">
-        <!-- Sidebar user (optional) -->
+        <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+            <img src="../../dist/img/user-mauricio.jpeg" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">Samir Millán</a>
+            <a href="#" class="d-block">Mauricio Drada</a>
           </div>
         </div>
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
-            <!-- menu-open -->
-            <li class="nav-header">MAIN NAVIGATION</li>
+            <!-- Add icons to links using .nav-icon class with font-awesome or other icon font library -->
             <li class="nav-item has-treeview menu-open">
-              <a href="#" class="nav-link active">
+              <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-th"></i>
                 <p>
                   Activities
@@ -80,37 +72,26 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="../activities/daily.html" class="nav-link">
+                  <a href="../../pages/activities/daily.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
-                    <p>Daily activities</p>
+                    <p>Daily Activities</p>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="../activities/weekly.html" class="nav-link active">
+                  <a href="../../pages/activities/weekly.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
-                    <p>Weekly activities</p>
+                    <p>Weekly Activities</p>
                   </a>
                 </li>
-
               </ul>
             </li>
-            <li class="nav-item has-treeview">
-              <a href="#" class="nav-link">
-                <i class="nav-icon fas fa-table"></i>
+            <li class="nav-item">
+              <a href="../../pages/results/activity_1.html" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
                 <p>
                   Results
-                  <i class="fas fa-angle-left right"></i>
                 </p>
               </a>
-              <ul class="nav nav-treeview">
-                <li class="nav-item">
-                  <a href="../../pages/results/activity_1.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Activity 1</p>
-                  </a>
-                </li>
-              </ul>
-            </li>
             </li>
           </ul>
         </nav>
@@ -126,7 +107,7 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1 class="m-0 text-dark">Weekly</h1>
+              <h1 class="m-0 text-dark">Weekly Activities</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
@@ -139,7 +120,7 @@
       <!-- /.content-header -->
 
       <!-- Main content -->
-      <section class="content">
+      <div class="content">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
@@ -155,22 +136,22 @@
                     <li class="nav-item">
                       <a class="nav-link active" id="custom-tabs-one-home-tab" data-toggle="pill"
                         href="#custom-tabs-one-home" role="tab" aria-controls="custom-tabs-one-home"
-                        aria-selected="true">Activities 1</a>
+                        aria-selected="true">Activity 1</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" id="custom-tabs-one-profile-tab" data-toggle="pill"
                         href="#custom-tabs-one-profile" role="tab" aria-controls="custom-tabs-one-profile"
-                        aria-selected="false">Activities 2</a>
+                        aria-selected="false">Activity 2</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" id="custom-tabs-one-messages-tab" data-toggle="pill"
                         href="#custom-tabs-one-messages" role="tab" aria-controls="custom-tabs-one-messages"
-                        aria-selected="false">Activities 3</a>
+                        aria-selected="false">Activity 3</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" id="custom-tabs-one-settings-tab" data-toggle="pill"
                         href="#custom-tabs-one-settings" role="tab" aria-controls="custom-tabs-one-settings"
-                        aria-selected="false">Activities 4</a>
+                        aria-selected="false">Activity 4</a>
                     </li>
                   </ul>
                 </div>
@@ -221,26 +202,35 @@
               </div>
             </div>
           </div>
-        </div>
+        </div><!-- /.container-fluid -->
+      </div>
+      <!-- /.content -->
     </div>
-    </section>
-    <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
-  <footer class="main-footer">
-    <div class="float-right d-none d-sm-block">
-      <b>Version </b>1.0 
-    </div>
-    <strong> &copy;2020 <a href="../../index.html">Nativo </a></strong> 
-  </footer>
+    <!-- /.content-wrapper -->
 
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
+    <!-- Control Sidebar -->
+    <aside class="control-sidebar control-sidebar-dark">
+      <!-- Control sidebar content goes here -->
+      <div class="p-3">
+        <h5>Title</h5>
+        <p>Sidebar content</p>
+      </div>
+    </aside>
+    <!-- /.control-sidebar -->
+
+    <!-- Main Footer -->
+    <footer class="main-footer">
+      <!-- To the right -->
+      <div class="float-right d-none d-sm-inline">
+        Version 1.0.0
+      </div>
+      <!-- Default to the left -->
+      <strong> &copy; 2020 <a href="../../index.html">Nativo </a></strong>
+    </footer>
   </div>
   <!-- ./wrapper -->
+
+  <!-- REQUIRED SCRIPTS -->
 
   <!-- jQuery -->
   <script src="../../plugins/jquery/jquery.min.js"></script>
@@ -248,8 +238,6 @@
   <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../../dist/js/adminlte.min.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="../../dist/js/demo.js"></script>
 </body>
 
 </html>
